--- a/public/gym_dark/css/style.css
+++ b/public/gym_dark/css/style.css
@@ -1782,7 +1782,7 @@ input[type="checkbox"].switch_1:checked:after{
 
 .header .tables{
     width: 100%;
-    overflow-x: auto;}
+}
 
 @media(max-width:767px) {
     .header .nav-pills .nav-link{
@@ -1793,7 +1793,6 @@ input[type="checkbox"].switch_1:checked:after{
     }
     .header .tables{
         width: 100%;
-        overflow-x: auto;
         margin-bottom: 20px;
     }
 
